# tmpmail

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/tmpmail/: __about__.py  __init__.py  base.py  cli.py  config.py  logging_config.py  storage.py  utils.py
src/tmpmail/services/: base.py  guerrillamail_service.py  mailtm_service.py  xtempmail_service.py
tests/: __init__.py
