[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmpmail"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "jonnieey", email = "johnjahi55@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "aiohttp",
    "pyperclip",
    "pydantic",
    "xdg",
    "mailtmapi @ git+https://github.com/jonnieey/MailTM.git@dev",
    "xtempmail @ git+https://github.com/krypton-byte/xtempmail"
]

[project.urls]
Documentation = "https://github.com/jonnieey/tmpmail#readme"
Issues = "https://github.com/jonnieey/tmpmail/issues"
Source = "https://github.com/jonnieey/tmpmail"

[tool.hatch.version]
path = "src/tmpmail/__about__.py"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.dev]
dependencies = [
  "pre-commit"
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tmpmail tests}"

[tool.coverage.run]
source_pkgs = ["tmpmail", "tests"]
branch = true
parallel = true
omit = [
  "src/tmpmail/__about__.py",
]

[tool.coverage.paths]
tmpmail = ["src/tmpmail", "*/tmpmail/src/tmpmail"]
tests = ["tests", "*/tmpmail/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
 tmpmail = "tmpmail.cli:main"
